appId: ${APP_ID}
name: LoginWithCredentials
---
- tapOn:
    id: "com.saucelabs.mydemoapp.android:id/nameET"
- inputText: ${USERNAME}
- tapOn:
    id: "com.saucelabs.mydemoapp.android:id/passwordET"
- inputText: ${PASSWORD}
- tapOn:
    id: "com.saucelabs.mydemoapp.android:id/loginBtn"
