appId: ${APP_ID}
name: WebViewNavigateUrl
---
- tapOn:
    id: "com.saucelabs.mydemoapp.android:id/urlET"
- eraseText
- inputText: ${URL}
- tapOn:
    id: "com.saucelabs.mydemoapp.android:id/goBtn"
- extendedWaitUntil:
    visible: ".*Wikipedia.*|.*Encyclopedia.*"
    timeout: 20000
